IDEA suggestions